<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/gotoMaps"
        android:title="@string/map"
        android:icon="@drawable/ic_map"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/settingMenu"
        android:icon="@drawable/ic_setting"
        android:title="@string/setting"
        app:showAsAction="always"/>

</menu>