...

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <ImageView
           android:id="@+id/storyImage"
           android:layout_width="match_parent"
           android:layout_height="0dp"
           tools:src="@drawable/talk"
           android:adjustViewBounds="true"
           android:scaleType="centerCrop"
           app:layout_constraintDimensionRatio="1x1"
...
